[package]
name = "glyph-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "2.1.6", features = ["chrono", "numeric", "postgres", "r2d2", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
fern = { version = "0.6.1", features = ["date-based"] }
futures = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.17"
rustls = "0.23.5"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
tokio-postgres-rustls = "0.12.0"
