[package]
name = "glyph-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
auto_migration = ["diesel_migrations"]

[dependencies]
bigdecimal = "0.4.3"
chrono = { version = "0.4.19", features = ["serde"] }
clokwerk = "0.4.0"
diesel = { version = "2.1.6", features = ["chrono", "numeric", "postgres", "r2d2", "uuid"] }
diesel-async = { version = "0.4.1", features = ["postgres", "deadpool"] }
dotenvy = "0.15.7"
fern = { version = "0.6.1", features = ["date-based"] }
flurry = "0.5.1"
futures = "0.3.21"
lazy_static = "1.4.0"
log = "0.4.17"
rustls = "0.23.5"
rustls-native-certs = "0.7.0"
rustls-pemfile = "2.1.2"
rusty_pool = "0.7.0"
serenity = "0.12"
thiserror = "1.0.24"
tokio = { version = "1", features = ["full"] }
tokio-postgres = "0.7.8"
tokio-postgres-rustls = "0.12.0"

[dependencies.diesel_migrations]
version = "2.1.0"
optional = true
